# EngineAndGame

./: CMakeLists.txt
Engine/include/framework/: Application.h
Engine/include/widgets/: Button.h  TextWidget.h
Engine/src/framework/: Application.cpp
Engine/src/gameplay/: GameStage.cpp
Engine/src/widgets/: Button.cpp
Game/include/: config.h
Game/include/Enemy/: Hexagon.h  TwinBlade.h  UFO.h  Vanguard.h
Game/include/VFX/: Explosion.h
Game/include/player/: PlayerSpaceship.h
Game/include/weapon/: BulletShooter.h
Game/include/widgets/: GameplayHUD.h
Game/src/Enemy/: Boss.cpp
Game/src/Level/: GameLevelOne.cpp  MainMenuLevel.cpp
Game/src/VFX/: Explosion.cpp
Game/src/gameFramework/: GameApplication.cpp
Game/src/player/: Reward.cpp
Game/src/weapon/: FrontalWiper.cpp
Game/src/widgets/: GameplayHUD.cpp  MainMenuHUD.cpp
